Fixes aligned and size of picture when resizing browser

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -28,8 +28,11 @@
     /* width:  250px;
     height: 250px; */
     object-fit: cover;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
 }
-
 
 .picture-frame p {
     text-align: center;
